--- a/.project.json
+++ b/.project.json
@@ -13,6 +13,11 @@
       "templateId": "ui5template.basicSAPUI5ApplicationProject",
       "templateVersion": "1.32.0",
       "dateTimeStamp": "Mon, 16 May 2016 13:46:55 GMT"
+    },
+    {
+      "templateId": "ui5template.basicSAPUI5ApplicationComponent",
+      "templateVersion": "1.4.0",
+      "dateTimeStamp": "Mon, 16 May 2016 15:21:32 GMT"
     }
   ],
   "translation": {
