--- a/neo-app.json
+++ b/neo-app.json
@@ -1,5 +1,6 @@
 {
   "welcomeFile": "/webapp/index.html",
+  "authenticationMethod": "none",
   "routes": [
     {
       "path": "/resources",
@@ -18,6 +19,30 @@
         "entryPath": "/test-resources"
       },
       "description": "SAPUI5 Test Resources"
+    },
+    {
+      "path": "/themedesigner",
+      "target": {
+        "type": "application",
+        "name": "themedesigner"
+      },
+      "description": "Route for theme designer"
+    },
+    {
+      "path": "/custom1bluecrystal",
+      "target": {
+        "type": "application",
+        "name": "custom1bluecrystal"
+      },
+      "description": "Route for theme"
+    },
+    {
+      "path": "/destinations/DOdestination",
+      "target": {
+        "type": "destination",
+        "name": "DOdestination"
+      },
+      "description": "DOdestination"
     }
   ],
   "sendWelcomeFileRedirect": true
